[package]
name = "wasm-fractals"
version = "0.1.0"
authors = ["Aaron Sorensen <ThatDevGuyAaron@Gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3.30"
features = [
  'ImageData',
  'CanvasRenderingContext2d',
  'console'
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"
